<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.sapia.segundoparcial.AboutMe">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"></android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca" />


    <TextView
        android:id="@+id/txtCreador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creador" />


    <TextView
        android:id="@+id/txtPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para" />

</LinearLayout>
